src/test/deca/syntax/invalid/created/sans_objet/identificateurs.deca
// Description:
//    Programme minimaliste utilisant identificateur.
//
//
// Resultats:
//    ligne 12 : Erreur, identificateur ne peut pas commencer par un digit
//   
// Historique:
//    cree le 11/01/2024

{
        float 1test_12;
}